--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "mongoose": "^7.2.2"
   },
   "devDependencies": {
+    "eslint": "^8.43.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.22"
   }
 }
